Add Dockerfile to be able to build project to an image. Add maven wrapper to allow maven execution during build process. Add frontend-maven-plugin to allow maven to also build frontend to static files.