@@ -2,6 +2,7 @@ package dev.gmarchev.flightmanager;
 
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import dev.gmarchev.flightmanager.config.AccountMapping;
@@ -106,26 +107,70 @@ public class DataInitializerCommandLineRunner implements CommandLineRunner {
 		}
 
 
-		AirplaneModel airplaneModel = AirplaneModel.builder().modelNumber("111").capacityEconomy(5).capacityBusiness(2).build();
-		airplaneModelRepository.save(airplaneModel);
+		AirplaneModel airplaneModel1 = AirplaneModel.builder()
+				.modelNumber("AAA").capacityEconomy(5).capacityBusiness(2).build();
+		airplaneModelRepository.save(airplaneModel1);
+		AirplaneModel airplaneModel2 = AirplaneModel.builder()
+				.modelNumber("BBB").capacityEconomy(5).capacityBusiness(2).build();
+		airplaneModelRepository.save(airplaneModel2);
+		AirplaneModel airplaneModel3 = AirplaneModel.builder()
+				.modelNumber("CCC").capacityEconomy(5).capacityBusiness(2).build();
+		airplaneModelRepository.save(airplaneModel3);
+		AirplaneModel airplaneModel4 = AirplaneModel.builder()
+				.modelNumber("DDD").capacityEconomy(5).capacityBusiness(2).build();
+		airplaneModelRepository.save(airplaneModel4);
 
-		Airplane airplane = Airplane.builder().airplaneAirplaneModel(airplaneModel).serialNumber("123").build();
-		airplaneRepository.save(airplane);
+		Airplane airplane1 = Airplane.builder().airplaneAirplaneModel(airplaneModel1).serialNumber("111").build();
+		airplaneRepository.save(airplane1);
+		Airplane airplane2 = Airplane.builder().airplaneAirplaneModel(airplaneModel2).serialNumber("222").build();
+		airplaneRepository.save(airplane2);
+		Airplane airplane3 = Airplane.builder().airplaneAirplaneModel(airplaneModel3).serialNumber("333").build();
+		airplaneRepository.save(airplane3);
+		Airplane airplane4 = Airplane.builder().airplaneAirplaneModel(airplaneModel4).serialNumber("444").build();
+		airplaneRepository.save(airplane4);
 
 		Pilot pilot1 = Pilot.builder().firstName("Петър").lastName("Петров").build();
 		pilotRepository.save(pilot1);
 		Pilot pilot2 = Pilot.builder().firstName("Ивелина").lastName("Иванова").build();
 		pilotRepository.save(pilot2);
+		Pilot pilot3 = Pilot.builder().firstName("Иван").lastName("Иванов").build();
+		pilotRepository.save(pilot3);
+		Pilot pilot4 = Pilot.builder().firstName("Господин").lastName("Господинов").build();
+		pilotRepository.save(pilot4);
 
-		Location location1 = Location.builder().airportName("Heathrow Airport").city("London").country("UK").build();
-		Location location2 = Location.builder().airportName("John F. Kennedy International Airport").city("New York").country("USA").build();
-		Location location3 = Location.builder().airportName("Tokyo Haneda Airport").city("Tokyo").country("Japan").build();
-		Location location4 = Location.builder().airportName("Charles de Gaulle Airport").city("Paris").country("France").build();
-		locationRepository.saveAll(List.of(location1, location2, location3, location4));
+		List<Location> locationList = Arrays.asList(
+				new String[] { "Летище Лондон Хийтроу", "Лондон", "Великобритания" },
+				new String[] { "Летище Париж Шарл де Гол", "Париж", "Франция" },
+				new String[] { "Летище Франкфурт", "Франкфурт", "Германия" },
+				new String[] { "Летище Амстердам Схипхол", "Амстердам", "Нидерландия" },
+				new String[] { "Летище Дубай", "Дубай", "Обединени арабски емирства" },
+				new String[] { "Летище Истанбул", "Истанбул", "Турция" },
+				new String[] { "Летище Токио Нарита", "Токио", "Япония" },
+				new String[] { "Летище Лос Анджелис", "Лос Анджелис", "САЩ" },
+				new String[] { "Летище Сидни", "Сидни", "Австралия" },
+				new String[] { "Летище Рим Фиумичино", "Рим", "Италия" },
+				new String[] { "Летище Пекин Капитал", "Пекин", "Китай" },
+				new String[] { "Летище Мадрид-Барахас", "Мадрид", "Испания" },
+				new String[] { "Летище Хонконг", "Хонконг", "Китай" },
+				new String[] { "Летище Куала Лумпур", "Куала Лумпур", "Малайзия" },
+				new String[] { "Летище Мумбай", "Мумбай", "Индия" },
+				new String[] { "Летище Чикаго О'Хеър", "Чикаго", "САЩ" },
+				new String[] { "Летище Канкун", "Канкун", "Мексико" },
+				new String[] { "Летище Банкок Суварнабхуми", "Банкок", "Тайланд" },
+				new String[] { "Летище Сингапур Чанги", "Сингапур", "Сингапур" },
+				new String[] { "Летище Сеул Инчон", "Сеул", "Южна Корея" }
+		).stream().map(l -> Location.builder().airportName(l[0]).city(l[1]).country(l[2]).build()).toList();
+
+		locationRepository.saveAll(locationList);
+
+		Location location1 = locationList.get(0);
+		Location location2 = locationList.get(1);
+		Location location3 = locationList.get(3);
+		Location location4 = locationList.get(4);
 
 		ZonedDateTime now = ZonedDateTime.now();
 		FlightCreateRequest flight1 = FlightCreateRequest.builder()
-				.flightAirplane(airplane.getId())
+				.flightAirplane(airplane1.getId())
 				.flightPilot(pilot1.getId())
 				.flightDepartureLocation(location1.getId())
 				.flightDestinationLocation(location2.getId())
@@ -133,7 +178,7 @@ public class DataInitializerCommandLineRunner implements CommandLineRunner {
 				.arrivalTime(now.plusHours(1))
 				.build();
 		FlightCreateRequest flight2 = FlightCreateRequest.builder()
-				.flightAirplane(airplane.getId())
+				.flightAirplane(airplane2.getId())
 				.flightPilot(pilot2.getId())
 				.flightDepartureLocation(location3.getId())
 				.flightDestinationLocation(location4.getId())
@@ -143,7 +188,7 @@ public class DataInitializerCommandLineRunner implements CommandLineRunner {
 
 		ZonedDateTime tomorrow = now.plusDays(1);
 		FlightCreateRequest flight3 = FlightCreateRequest.builder()
-				.flightAirplane(airplane.getId())
+				.flightAirplane(airplane1.getId())
 				.flightPilot(pilot1.getId())
 				.flightDepartureLocation(location1.getId())
 				.flightDestinationLocation(location2.getId())
@@ -151,7 +196,7 @@ public class DataInitializerCommandLineRunner implements CommandLineRunner {
 				.arrivalTime(tomorrow.plusHours(1))
 				.build();
 		FlightCreateRequest flight4 = FlightCreateRequest.builder()
-				.flightAirplane(airplane.getId())
+				.flightAirplane(airplane2.getId())
 				.flightPilot(pilot2.getId())
 				.flightDepartureLocation(location3.getId())
 				.flightDestinationLocation(location4.getId())
